<resources>
    <string name="app_name">Door Lock Check</string>
    <string name="door_is_locked">Door is Locked</string>
    <string name="door_is_unlocked">Door is Unlocked</string>
    <string name="door_lock_button">Locked the Door</string>
    <string name="door_unlock_button">Unlocked the Door</string>
</resources>
